big speed improvements in collision detection and thus whole game through ruthless shunning of pooled objects

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Pistol Slut
 A 2D side-scrolling platformer written in JavaScript.
 http://pistolslut.com
 
-By: maryrosecook
+By maryrosecook
 http://maryrosecook.com
 maryrosecook@maryrosecook.com
 
