bodies get thrown backwards when they die

--- a/README
+++ b/README
@@ -6,4 +6,4 @@ By maryrosecook
 http://maryrosecook.com
 maryrosecook@maryrosecook.com
 
-The code is open source and released under the MIT license. Pistol Slut uses The Render Engine by Brett Fattori.
+The code is open source and has been released under the MIT license. Pistol Slut uses The Render Engine by Brett Fattori.
