widescreen; level triggers now work over ranges

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 Pistol Slut
-A 2D side-scrolling platformer written in JavaScript.
+A 2D shoot-em-up platformer written in JavaScript.
 http://pistolslut.com
 
 By maryrosecook
 http://maryrosecook.com
 maryrosecook@maryrosecook.com
 
-The code is open source and has been released under the MIT license. Pistol Slut uses The Render Engine by Brett Fattori.
+The code has been open sourced under the MIT license. Pistol Slut uses The Render Engine by Brett Fattori.
