--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Pistol Slut
 A 2D shoot-em-up platformer written in JavaScript.
 http://pistolslut.com
 
-By maryrosecook
+By mary rose cook
 http://maryrosecook.com
 maryrosecook@maryrosecook.com
 
